# hoosh

./: .gitignore  ACE_ORCHESTRATION.md  AGENTS.md  AGENT_SWITCHING.md  ARCHITECTURE.md  CLAUDE.md  CODEBASE_OVERVIEW.md  CODEBASE_REVIEW.md  COMPACTION.md  COMPACT_SUMMARIZER_PLAN.md  COMPLETION_REPORT.md  CONTEXT_COMPRESSION_REVIEW.md  CONTEXT_MANAGEMENT_FIX_PLAN.md  CONTEXT_MANAGEMENT_IMPLEMENTATION_GUIDE.md  CONTEXT_MANAGER_EXAMPLES.md  CONTEXT_MANAGER_IMPLEMENTATION.md  CONTEXT_REDUCTION.md  CRITICAL_ISSUES.md  CUSTOM_TEXTAREA_IMPLEMENTATION_GUIDE.md  Cargo.toml  FEATURE_PLAN_TASK_TIMEOUT_BUDGET_TRACKING.md  GRACEFUL_LLM_ERROR_HANDLING_PHASE_1_EVENTS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  ISSUES.md  MARKDOWN_RENDERER.md  MINOR_ISSUES.md  MVP_ARCH_TASKS.md  MVP_RELEASE_TASKS.md  PERMISSION_MODEL_REVIEW.md  PERMISSION_TESTING_REPORT.md  PERRMISSION.md  PHASE_2_IMPLEMENTATION_PROGRESS.md  PHASE_2_SUMMARY.md  README.md  REFACTOR_CONVERSATION.md  REFACTOR_SCROLL.md  REVIEW.md  (+21 more)
.claude/commands/: kargah-constitution.md  kargah-init.md  kargah-kickoff.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: CLAUDE_CODE_PARITY.md  COMPETITOR_GAPS.md  CONTEXT_MANAGEMENT_FIX_PLAN.md  CONTEXT_MANAGEMENT_IMPLEMENTATION_GUIDE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  TODO.md  additional-gaps-from-cc-source.md  cc-memory-architecture-vs-hoosh.md  claude-code-prompting-learnings.md  memory-phase-b-pickup.md  p0-subagent-prompt-unification.md  prompting-strategy-improvement-plan.md  session-handover-2026-06-13-pm.md  session-handover-2026-06-13.md
ideas/: DYNAMIC_TOOLS.md  SCREENSHOT_SUPPORT.md  phase1-basic-cascade.md  phase2-embedding-routing.md  phase3-adaptive-learning.md
scripts/: server-setup.sh
specs/001-custom-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-disable-conversation-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-markdown-table-rendering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-model-cascade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-terminal-modes/: IMPLEMENTATION_STATUS.md  QUICKSTART_INTEGRATION.md  REVIEW_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-input-field-refinement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-daemon-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: console.rs  conversation.rs  lib.rs  logging.rs  main.rs  output_format.rs  session.rs  tagged_mode.rs  terminal_capabilities.rs  terminal_markdown.rs  terminal_mode.rs  terminal_spinner.rs  text_prompts.rs  tool_executor.rs
tests/: context_management_integration_test.rs  conversation_storage_test.rs  daemon_task_flow.rs  reasoning_live.rs  scroll_state_test.rs  session_cleanup_test.rs  session_file_test.rs  session_persistence_test.rs  tagged_mode_cli_test.rs  terminal_capabilities_test.rs  terminal_mode_test.rs
(+357 files in other folders)
