[package]
name = "hoosh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hoosh"
path = "src/main.rs"

[features]
default = ["openai-compatible", "together-ai", "anthropic"]
openai-compatible = ["dep:reqwest"]
together-ai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
anyhow = "1.0"
thiserror = "2.0.16"
async-trait = "0.1"
regex = "1.0"
colored = "2.0"
ratatui = "0.29.0"
crossterm = "0.27.0"
tui-textarea = "0.4.0"
dirs = "5.0"

# Use ureq instead of reqwest for simpler HTTP client that doesn't pull in ICU deps
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

[dev-dependencies]
tempfile = "3.0"
