[package]
name = "hoosh"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/nomad-prime/hoosh"

[[bin]]
name = "hoosh"
path = "src/main.rs"

[features]
default = ["openai-compatible", "together-ai", "anthropic", "ollama"]
openai-compatible = ["dep:reqwest"]
together-ai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
ollama = ["dep:reqwest"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
anyhow = "1.0"
thiserror = "2.0.16"
async-trait = "0.1"
regex = "1.0"
colored = "2.0"
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
crossterm = "0.27.0"
tui-textarea = "0.4.0"
similar = "2.6"
rand = "0.8"
arboard = "3.4"
textwrap = "0.16"
chrono = "0.4"
capitalize = "0.3.4"

# Use ureq instead of reqwest for simpler HTTP client that doesn't pull in ICU deps
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
dirs = "6.0.0"
jsonschema = "0.18"
glob = "0.3.3"
walkdir = "2.0"
which = "6.0"
pulldown-cmark = "0.11"
syntect = "5.2"
shlex = "1.3.0"

[dev-dependencies]
tempfile = "3.0"
httpmock = "0.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


